--- a/public/projects.json
+++ b/public/projects.json
@@ -52,7 +52,7 @@
         "Pipeline layout, plant room configuration, and outlet installation",
         "Future-ready setup with safety alarms and control valves"
       ],
-      "img": "/repairs-main.jpg"
+      "img": "/kapili1.webp"
     },
     "images": [
       "/repairs-main.jpg",
@@ -76,7 +76,7 @@
     "date": "5 March 2020",
     "client": "Creative Spaces",
     "type": "Custom Design",
-    "heroImg": "/custom-design-main.jpg",
+    "heroImg": "/healthplanetnagao1.webp",
     "description": "Custom MGPS and OT installations to upgrade existing infrastructure. Enhanced ICU operations with scrub station support.",
     "actualWorkTitle": "Modular OT & Bed Setup at Health Planet Hospital",
     "actualWorkDesc": "Custom MGPS and OT installations to upgrade existing infrastructure. Enhanced ICU operations with scrub station support.",
@@ -87,7 +87,7 @@
         "Bed head panels and basic OT infrastructure",
         "Emergency backup, safety valves, and alarm systems"
       ],
-      "img": "/building-construction-main.jpg"
+      "img": "/healthplanetnagao2.jpg"
     },
     "images": [
       "/custom-design-main.jpg",
@@ -96,12 +96,12 @@
     ],
     "descBlocks": [
       {
-        "img": "/custom-design-main.jpg",
+        "img": "/healthplanetnagao4.jpg",
         "text": "Alex Healthcare upgraded Health Planet Hospital with a combination of gas pipeline installations and essential OT infrastructure. Central suction and oxygen lines were deployed across critical zones."
 
       },
       {
-        "img": "/building-construction-main.jpg",
+        "img": "/healthplanetnagao1.webp",
         "text": "These upgrades enabled smooth coordination between departments, ensured staff readiness, and minimized contamination risks."
       }
     ]
@@ -112,7 +112,7 @@
     "date": "10 July 2021",
     "client": "City Infrastructure",
     "type": "Bridge Construction",
-    "heroImg": "/about-bridge.jpg",
+    "heroImg": "/metroghy1.webp",
     "description": "Advanced modular and semi-modular OT theatres installed. Laminar flow, pendants, and curtains for modern surgical zones.",
     "actualWorkTitle": "Modular ICU Components Installation at Various Hospitals",
     "actualWorkDesc": "Advanced modular and semi-modular OT theatres installed. Laminar flow, pendants, and curtains for modern surgical zones.",
@@ -123,7 +123,7 @@
         "Laminar airflow, HEPA filters, pendants, and LED lighting",
         "Scrub stations and curtain tracks"
       ],
-      "img": "/about-bridge.jpg"
+      "img": "/metroghy0.webp"
     },
     "images": [
       "/about-bridge.jpg",
@@ -132,11 +132,11 @@
     ],
     "descBlocks": [
       {
-        "img": "/about-bridge.jpg",
+        "img": "/metroghy2.webp",
         "text": "Alex Healthcare introduced modular flexibility to Metro Hospital through the installation of fully modular and semi-modular OTs. All setups were aligned with infection control norms and procedural workflow."
       },
       {
-        "img": "/building-construction-main.jpg",
+        "img": "/metroghy1.webp",
         "text": "The project supports a higher volume of surgical activity with increased safety, shorter turnovers, and better clinical outcomes."
       }
     ]
@@ -147,7 +147,7 @@
     "date": "18 September 2022",
     "client": "Downtown Business Center",
     "type": "Renovation",
-    "heroImg": "/about-carousel.jpg",
+    "heroImg": "/nagaometro0.webp",
     "description": "Single modular OT with complete theatre accessories and anti-microbial flooring. Created for optimal surgical control.",
     "actualWorkTitle": "Vacuum Pump Installations at Various Hospitals",
     "actualWorkDesc": "Single modular OT with complete theatre accessories and anti-microbial flooring. Created for optimal surgical control.",
@@ -158,7 +158,7 @@
         "Vinyl flooring with antimicrobial properties",
         "Track and curtain installations, scrub sinks"
       ],
-      "img": "/about-carousel.jpg"
+      "img": "/nagaometro1.webp"
     },
     "images": [
       "/about-carousel.jpg",
@@ -167,11 +167,11 @@
     ],
     "descBlocks": [
       {
-        "img": "/about-carousel.jpg",
+        "img": "/nagaometro2.webp",
         "text": "At Nagaon Metro Hospital, Alex Healthcare focused on redesigning OT spaces for optimal sterility. Surgical zones were upgraded using hygienic surfaces and medical-grade accessories."
       },
       {
-        "img": "/custom-design-main.jpg",
+        "img": "/nagaometro3.webp",
         "text": "The result was an aseptic, efficient environment with minimal downtime and maximum surgical throughput."
       }
     ]
@@ -182,7 +182,7 @@
     "date": "18 September 2022",
     "client": "Downtown Business Center",
     "type": "Renovation",
-    "heroImg": "/about-carousel.jpg",
+    "heroImg": "/healthcityghy0.webp",
     "description": "Six full modular OTs installed with laminar airflow and scrub zones. One of the region’s largest OT enhancement projects.",
     "actualWorkTitle": "Vacuum Pump Installations at Various Hospitals",
     "actualWorkDesc": "Six full modular OTs installed with laminar airflow and scrub zones. One of the region’s largest OT enhancement projects.",
@@ -193,7 +193,7 @@
         "Laminar flow systems and custom scrub stations",
         "Centralized MGPS and electrical routing"
       ],
-      "img": "/about-carousel.jpg"
+      "img": "/healthcityghy1.webp"
     },
     "images": [
       "/about-carousel.jpg",
@@ -202,11 +202,11 @@
     ],
     "descBlocks": [
       {
-        "img": "/about-carousel.jpg",
+        "img": "/healthcityghy2.webp",
         "text": "Health City Hospital’s extensive OT wing was developed with six fully modular setups tailored to departments like gastro, ortho, neuro, and general surgery."
       },
       {
-        "img": "/custom-design-main.jpg",
+        "img": "/healthcityghy3.webp",
         "text": "The modular infrastructure improved surgical precision, scheduling flexibility, and staff efficiency. It stands as a reference project in the region."
       }
     ]
@@ -217,7 +217,7 @@
     "date": "18 September 2022",
     "client": "Downtown Business Center",
     "type": "Renovation",
-    "heroImg": "/about-carousel.jpg",
+    "heroImg": "/ihr.jpg",
     "description": "IVF-specialized OT upgrades across 3 locations. Delivered with sealed cleanroom systems, pass boxes, and surgical fittings.",
     "actualWorkTitle": "Vacuum Pump Installations at Various Hospitals",
     "actualWorkDesc": "IVF-specialized OT upgrades across 3 locations. Delivered with sealed cleanroom systems, pass boxes, and surgical fittings.",
@@ -228,7 +228,7 @@
         "Vinyl flooring, scrub stations, pass boxes, pendants",
         "Environmental controls for embryology labs"
       ],
-      "img": "/about-carousel.jpg"
+      "img": "/ihr1.avif"
     },
     "images": [
       "/about-carousel.jpg",
@@ -237,11 +237,11 @@
     ],
     "descBlocks": [
       {
-        "img": "/about-carousel.jpg",
+        "img": "/ihr2.jpg",
         "text": "Alex Healthcare set up IVF-compatible modular OTs across IHR’s three facilities, addressing high-precision needs like temperature, airflow, and humidity control."
       },
       {
-        "img": "/custom-design-main.jpg",
+        "img": "/ihr3.jpg",
         "text": "These clean environments ensured embryo safety and procedural consistency across all locations."
       }
     ]
@@ -252,7 +252,7 @@
     "date": "18 September 2022",
     "client": "Downtown Business Center",
     "type": "Renovation",
-    "heroImg": "/about-carousel.jpg",
+    "heroImg": "/pheonix0.webp",
     "description": "Enhanced OT functionality through scrub station setup, sealed doors, and essential accessory fittings.",
     "actualWorkTitle": "Vacuum Pump Installations at Various Hospitals",
     "actualWorkDesc": "Enhanced OT functionality through scrub station setup, sealed doors, and essential accessory fittings.",
@@ -263,7 +263,7 @@
         "Modular sealed doors",
         "OT accessories"
       ],
-      "img": "/about-carousel.jpg"
+      "img": "/pheonix3.jpg"
     },
     "images": [
       "/about-carousel.jpg",
@@ -272,11 +272,11 @@
     ],
     "descBlocks": [
       {
-        "img": "/about-carousel.jpg",
+        "img": "/pheonix2.jpg",
         "text": "Alex Healthcare enhanced Phoenix Healthcare’s operation rooms with key accessory installations, improving workflow and hygiene without disrupting ongoing operations."
       },
       {
-        "img": "/custom-design-main.jpg",
+        "img": "/pheonix4.webp",
         "text": "The upgrade significantly boosted staff readiness and streamlined surgical prep and recovery cycles."
       }
     ]
